--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -96,8 +96,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:fontFamily="@font/font_for_app"
-    >
+            android:fontFamily="@font/font_for_app">
         <EditText
                 android:id="@+id/etConfirmPassword"
                 android:layout_width="match_parent"
@@ -125,7 +124,7 @@
             style="@style/button"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:text="@string/signin"
+            android:text="@string/only_signup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
@@ -149,5 +148,15 @@
             app:ss_sliderBackgroundColor="@color/colorPrimary"
             app:ss_switchColor="@color/colorAccent"
             android:id="@+id/stickySwitch"/>
+    <TextView
+            android:text="Sign In ? Click here"
+            style="@style/normal"
+            android:textColor="#fff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvIsSignUp"
+            android:padding="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
