--- a/app/src/main/res/layout/tourny_item_player.xml
+++ b/app/src/main/res/layout/tourny_item_player.xml
@@ -17,6 +17,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/trans_black"
+                app:layout_constraintTop_toTopOf="parent"
                 android:paddingBottom="8dp">
 
             <TextView
@@ -220,12 +221,44 @@
                     style="@style/button"
                     android:textSize="11sp"
                     android:padding="8dp"
+                    android:visibility="visible"
                     android:textStyle="normal"
                     app:layout_constraintTop_toBottomOf="@+id/tvPlayersFilled" app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     android:layout_marginTop="8dp"/>
+
+            <ImageView
+                    android:text="Join"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/ivJoined"
+                    android:src="@mipmap/star"
+                    android:textSize="11sp"
+                    android:padding="8dp"
+                    android:textStyle="normal"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/tvPlayersFilled" app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="8dp"/>
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      app:layout_constraintEnd_toStartOf="@id/ivJoined"
+                      app:layout_constraintBottom_toBottomOf="@+id/ivJoined"
+                      app:layout_constraintTop_toTopOf="@+id/ivJoined"
+                      android:layout_marginRight="8dp"
+                      android:layout_marginEnd="5dp"
+                      style="@style/normal"
+                      android:id="@+id/tvJoined"
+                      android:textColor="@color/green"
+                      android:text="You have already joined"
+                      android:textStyle="bold"
+                      android:visibility="gone"
+            />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
