--- a/app/src/main/res/layout/tourny_item_player.xml
+++ b/app/src/main/res/layout/tourny_item_player.xml
@@ -5,6 +5,7 @@
         android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="8dp"
         app:cardCornerRadius="5dp"
+        android:id="@+id/vRoot"
 >
 
     <androidx.constraintlayout.widget.ConstraintLayout
