--- a/app/src/main/res/layout/tourny_item.xml
+++ b/app/src/main/res/layout/tourny_item.xml
@@ -225,6 +225,23 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"/>
+            <ImageView
+                    android:padding="5dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" app:srcCompat="@mipmap/youtube_link"
+                    android:id="@+id/ivYouLink"
+                    app:layout_constraintStart_toEndOf="@+id/ivYoutube"
+                    android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvPlayersFilled"/>
+            <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:srcCompat="@mipmap/youtube"
+                    android:id="@+id/ivYoutube"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/tvPlayersFilled" android:layout_marginTop="8dp"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+                    android:layout_marginStart="8dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
