--- a/app/src/main/res/layout/activity_admin_add_room.xml
+++ b/app/src/main/res/layout/activity_admin_add_room.xml
@@ -5,14 +5,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <include
-        layout="@layout/app_bar_layout"
-        />
-    <androidx.constraintlayout.widget.ConstraintLayout
+  <include
+          layout="@layout/app_bar_layout"
+  />
+
+    <View
+            android:id="@+id/vSwitch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    >
+    />
+
+  <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          app:layout_behavior="@string/appbar_scrolling_view_behavior"
+  >
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,5 +41,5 @@
             app:layout_constraintBottom_toBottomOf="parent">
 
     </androidx.recyclerview.widget.RecyclerView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
