--- a/app/src/main/res/layout/activity_admin_add_room.xml
+++ b/app/src/main/res/layout/activity_admin_add_room.xml
@@ -9,12 +9,6 @@
           layout="@layout/app_bar_layout"
   />
 
-    <View
-            android:id="@+id/vSwitch"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-    />
-
   <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
@@ -42,4 +36,11 @@
 
     </androidx.recyclerview.widget.RecyclerView>
   </androidx.constraintlayout.widget.ConstraintLayout>
+
+  <View
+          android:id="@+id/vSwitch"
+          android:layout_width="20dp"
+          android:layout_height="40dp"
+          android:layout_gravity="bottom|start"
+  />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
