--- a/app/src/main/res/layout/activity_tournament_details.xml
+++ b/app/src/main/res/layout/activity_tournament_details.xml
@@ -144,8 +144,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/green"
-                >
+                        android:background="@drawable/green_corners">
 
                     <TextView android:layout_width="0dp"
                               android:layout_height="wrap_content"
@@ -153,10 +152,10 @@
                               android:textColor="#fff"
                               style="@style/title"
                               android:id="@+id/tvWin"
-                              android:paddingTop="20dp"
-                              android:paddingBottom="20dp"
-                              android:paddingStart="10dp"
-                              android:paddingEnd="10dp"
+                              android:paddingTop="10dp"
+                              android:paddingBottom="10dp"
+                              android:paddingStart="5dp"
+                              android:paddingEnd="5dp"
                               app:layout_constraintTop_toBottomOf="@+id/textView23" android:layout_marginEnd="8dp"
                               app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                               android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
@@ -183,6 +182,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cardView"
                     app:layout_constraintStart_toEndOf="@+id/shimmerWinner"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginLeft="8dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="24dp"
@@ -190,12 +190,13 @@
                     app:shimmer_highlight_alpha="0.3"
                     app:shimmer_tilt="180"
                     app:shimmer_auto_start="true"
-                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.5">
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"
+                    app:layout_constraintHorizontal_bias="0.5">
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/red"
+                        android:background="@drawable/red_rectangle"
                 >
                     <TextView android:layout_width="match_parent"
                               android:layout_height="wrap_content"
@@ -203,10 +204,10 @@
                               style="@style/title"
                               android:id="@+id/tvPerkill"
                               android:textColor="#fff"
-                              android:paddingTop="20dp"
-                              android:paddingBottom="20dp"
-                              android:paddingStart="10dp"
-                              android:paddingEnd="10dp"
+                              android:paddingTop="10dp"
+                              android:paddingBottom="10dp"
+                              android:paddingStart="5dp"
+                              android:paddingEnd="5dp"
                               app:layout_constraintTop_toBottomOf="@+id/textView26"
                     />
                     <TextView
