added navigation bug fixes

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -20,9 +20,9 @@
         android:icon="@mipmap/notification"
         android:title="Notifications"
         />
-    <item
+   <!-- <item
         android:id="@+id/myprofile"
         android:icon="@mipmap/profile"
         android:title="My Profile"
-        />
+        />-->
 </menu>
