--- a/app/src/main/res/layout/activity_player_actvity.xml
+++ b/app/src/main/res/layout/activity_player_actvity.xml
@@ -1,39 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.drawerlayout.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/drawer"
         tools:context=".views.ui.activities.PlayerActvity">
 
-  <include
-          layout="@layout/app_bar_layout"
-  />
-
-  <androidx.constraintlayout.widget.ConstraintLayout
+  <androidx.coordinatorlayout.widget.CoordinatorLayout
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          app:layout_behavior="@string/appbar_scrolling_view_behavior">
-    <FrameLayout
-            android:id="@+id/frameContainer"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:elevation="16dp"
-            app:menu="@menu/menu"
-            android:background="#fff"
-            app:labelVisibilityMode="unlabeled"
-            android:id="@+id/bottomNavigationView"/>
-  </androidx.constraintlayout.widget.ConstraintLayout>
+          android:layout_height="match_parent">
+
+    <include
+            layout="@layout/app_bar_layout"
+    />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+      <FrameLayout
+              android:id="@+id/frameContainer"
+              android:layout_width="0dp"
+              android:layout_height="0dp"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"/>
+      <com.google.android.material.bottomnavigation.BottomNavigationView
+              android:layout_width="0dp"
+              android:layout_height="wrap_content"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:elevation="16dp"
+              app:menu="@menu/menu"
+              android:background="#fff"
+              app:labelVisibilityMode="unlabeled"
+              android:id="@+id/bottomNavigationView"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+  <com.google.android.material.navigation.NavigationView
+          android:id="@+id/navView"
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:layout_gravity="start"
+          android:fitsSystemWindows="true"
+          app:menu="@menu/drawer_menu"
+          app:headerLayout="@layout/nav_header"
+  />
+</androidx.drawerlayout.widget.DrawerLayout>
