--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="trans_black">#B3000000</color>
     <color name="start_app_dialog">#360033</color>
     <color name="end_app_dialog">#0b8793</color>
+    <color name="white">#ffffff</color>
 </resources>
