--- a/app/src/main/res/layout/activity_tournament_details.xml
+++ b/app/src/main/res/layout/activity_tournament_details.xml
@@ -8,12 +8,15 @@
         tools:context=".views.ui.activities.TournamentDetails">
 
     <include
+            android:id="@+id/ivPlay"
             layout="@layout/collapsing_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
     />
 
     <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
