--- a/app/src/main/res/layout/collapsing_toolbar.xml
+++ b/app/src/main/res/layout/collapsing_toolbar.xml
@@ -10,14 +10,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:contentScrim="@color/colorAccent"
+            app:contentScrim="@color/trans_black"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
         <ImageView
                 app:layout_collapseMode="parallax"
                 android:src="@mipmap/tourney_details"
                 android:scaleType="centerCrop"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="250dp"
         />
         <View android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -27,7 +27,6 @@
         <ImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:id="@+id/ivPlay"
                 android:src="@mipmap/youtube"
                 android:layout_gravity="center"
                 app:layout_collapseMode="parallax"
@@ -35,6 +34,7 @@
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 app:layout_collapseMode="pin"
+                app:layout_scrollFlags="scroll|enterAlways"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
     </com.google.android.material.appbar.CollapsingToolbarLayout>
