--- a/app/src/main/res/layout/activity_user_wallet.xml
+++ b/app/src/main/res/layout/activity_user_wallet.xml
@@ -31,15 +31,15 @@
                     android:padding="10dp"
                     android:layout_margin="50dp"
                     android:textColor="@color/blue"
-                    app:layout_constraintTop_toBottomOf="@+id/textView27" app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tvBalance" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
             <TextView
-                    android:text="TextView"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView27"
+                    android:id="@+id/tvBalance"
                     style="@style/title"
                     app:layout_constraintTop_toBottomOf="@+id/textView25"
                     app:layout_constraintStart_toEndOf="@+id/imageView10" android:layout_marginLeft="16dp"
@@ -58,11 +58,11 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                     android:layout_marginStart="8dp"/>
             <TextView
-                    android:text="TextView"
+                    android:text=""
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/title"
-                    android:id="@+id/textView24"
+                    android:id="@+id/tvNumber"
                     app:layout_constraintTop_toBottomOf="@+id/textView20"
                     app:layout_constraintStart_toEndOf="@+id/imageView8" android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"/>
