--- a/app/src/main/res/layout/tourny_item.xml
+++ b/app/src/main/res/layout/tourny_item.xml
@@ -4,10 +4,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/vRoot"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_margin="8dp"
-        app:cardCornerRadius="5dp"
->
+        app:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
